--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <!--
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.jpg" />
+
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -25,21 +23,184 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="style.css"/>
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
+  <title>IBCI</title>
+  <style>
+    @keyframes square-animation {
+      0% {
+        left: 0;
+        top: 0;
+      }
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      10.5% {
+        left: 0;
+        top: 0;
+      }
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+      12.5% {
+        left: 32px;
+        top: 0;
+      }
+
+      23% {
+        left: 32px;
+        top: 0;
+      }
+
+      25% {
+        left: 64px;
+        top: 0;
+      }
+
+      35.5% {
+        left: 64px;
+        top: 0;
+      }
+
+      37.5% {
+        left: 64px;
+        top: 32px;
+      }
+
+      48% {
+        left: 64px;
+        top: 32px;
+      }
+
+      50% {
+        left: 32px;
+        top: 32px;
+      }
+
+      60.5% {
+        left: 32px;
+        top: 32px;
+      }
+
+      62.5% {
+        left: 32px;
+        top: 64px;
+      }
+
+      73% {
+        left: 32px;
+        top: 64px;
+      }
+
+      75% {
+        left: 0;
+        top: 64px;
+      }
+
+      85.5% {
+        left: 0;
+        top: 64px;
+      }
+
+      87.5% {
+        left: 0;
+        top: 32px;
+      }
+
+      98% {
+        left: 0;
+        top: 32px;
+      }
+
+      100% {
+        left: 0;
+        top: 0;
+      }
+    }
+   .loading{
+   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 200px;
+   }
+    .loader {
+   
+      position: relative;
+      width: 96px;
+      height: 96px;
+      transform: rotate(45deg);
+    }
+
+    .loader-square {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 28px;
+      height: 28px;
+      margin: 2px;
+      border-radius: 0px;
+      background: #01abc8;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      animation: square-animation 10s ease-in-out infinite both;
+    }
+
+    .loader-square:nth-of-type(0) {
+      animation-delay: 0s;
+    }
+
+    .loader-square:nth-of-type(1) {
+      animation-delay: -1.4285714286s;
+    }
+
+    .loader-square:nth-of-type(2) {
+      animation-delay: -2.8571428571s;
+    }
+
+    .loader-square:nth-of-type(3) {
+      animation-delay: -4.2857142857s;
+    }
+
+    .loader-square:nth-of-type(4) {
+      animation-delay: -5.7142857143s;
+    }
+
+    .loader-square:nth-of-type(5) {
+      animation-delay: -7.1428571429s;
+    }
+
+    .loader-square:nth-of-type(6) {
+      animation-delay: -8.5714285714s;
+    }
+
+    .loader-square:nth-of-type(7) {
+      animation-delay: -10s;
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+ 
+  <div id="root">
+    <div class="loading">
+    <div class="loader" id="loader">
+      <div class="loader-square"></div>
+      <div class="loader-square"></div>
+      <div class="loader-square"></div>
+      <div class="loader-square"></div>
+      <div class="loader-square"></div>
+      <div class="loader-square"></div>
+      <div class="loader-square"></div>
+     
+    </div>
+  
+  </div>
+  </div>
+
+</body>
+<script>
+  $(window).load(function () {
+    $('#loader').css('display', 'none');
+
+  });
+</script>
+
 </html>
